--- a/OpenGL06/OpenGL06.xcodeproj/xcshareddata/xcschemes/OpenGL06.xcscheme
+++ b/OpenGL06/OpenGL06.xcodeproj/xcshareddata/xcschemes/OpenGL06.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/OpenGL07&#x2014;&#x2014;&#x6444;&#x50cf;&#x673a;/OpenGL07&#x2014;&#x2014;&#x6444;&#x50cf;&#x673a;"
+      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/OpenGL06/OpenGL06"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
