--- a/1.入门/4.2练习4/OpenGL04.xcodeproj/xcshareddata/xcschemes/OpenGL04.xcscheme
+++ b/1.入门/4.2练习4/OpenGL04.xcodeproj/xcshareddata/xcschemes/OpenGL04.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/OpenGL04&#x2014;&#x2014;&#x7ec3;&#x4e60;4/OpenGL04"
+      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/1.&#x5165;&#x95e8;/4.2&#x7ec3;&#x4e60;4/OpenGL04"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
