--- a/5.高级光照/26.高级光照/LearnOpenGL.xcodeproj/xcshareddata/xcschemes/LearnOpenGL.xcscheme
+++ b/5.高级光照/26.高级光照/LearnOpenGL.xcodeproj/xcshareddata/xcschemes/LearnOpenGL.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/5.&#x9ad8;&#x7ea7;&#x5149;&#x7167;/1.Blinn-Phong/LearnOpenGL"
+      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/5.&#x9ad8;&#x7ea7;&#x5149;&#x7167;/26.&#x9ad8;&#x7ea7;&#x5149;&#x7167;/LearnOpenGL"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
