--- a/5.高级光照/28.1.2 阴影映射_渲染阴影/LearnOpenGL.xcodeproj/xcshareddata/xcschemes/LearnOpenGL.xcscheme
+++ b/5.高级光照/28.1.2 阴影映射_渲染阴影/LearnOpenGL.xcodeproj/xcshareddata/xcschemes/LearnOpenGL.xcscheme
@@ -36,7 +36,7 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
-      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/5.&#x9ad8;&#x7ea7;&#x5149;&#x7167;/28.1 &#x9634;&#x5f71;&#x6620;&#x5c04;/LearnOpenGL"
+      customWorkingDirectory = "/Users/shanyuqin/Desktop/LearnOpenGL/5.&#x9ad8;&#x7ea7;&#x5149;&#x7167;/28.1.2 &#x9634;&#x5f71;&#x6620;&#x5c04;_&#x6e32;&#x67d3;&#x9634;&#x5f71;/LearnOpenGL"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
